Working without authenicated route, need to fix jwt